<resources>
    <string name="app_name">Home Salon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login_signup">Login / SignUp</string>
    <string name="logout">Sign out</string>
    <string name="login">Login</string>
    <string name="number_bond">*We will not share your number with anyone without your permission</string>
    <string name="facebook">Continue with facebook</string>
    <string name="fb_bond">*We will never post anything without your permission</string>
    <string name="skip">SKIP</string>
    <string name="copyright">© 2019 All Rights Reserved by HomeSalon.in  </string>
    <string name="welcome">Hassle-free beauty services at home</string>
    <string name="wel">Welcome</string>
    <string name="spl_msg1">Beauty Parlour Sevices at Your Doorstep </string>
    <string name="now_available">NOW IN YOUR CITY</string>
    <string name="gift">Gift Vouchers</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="appoint">My Appointment</string>
    <string name="refer">Refer and Earn</string>
    <string name="privacy">Privacy Policy</string>
    <string name="call">Call Us</string>
    <string name="close_drawer">close_drawer</string>
    <string name="open_drawer">open_drawer</string>
    <string name="notification">notification</string>
    <string name="communicate">Communicate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_address_map">Select Address</string>


    <!--    Facebook Credentials-->
    <string name="facebook_app_id">2847128225350848</string>
    <string name="fb_login_protocol_scheme">fb2847128225350848</string>


</resources>
