<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/xxx"
    >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"

                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="10dp"
                    >

                    <EditText
                        android:id="@+id/mobile_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Mobile Number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="16sp"
                        android:paddingStart="70dp"
                        android:background="@android:color/transparent"
                        >
                        <requestFocus />
                    </EditText>


                    <TextView
                        android:id="@+id/prefix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="8dp"
                        android:textSize="16sp"
                        android:text=" +91   "
                        android:drawableLeft="@drawable/india"
                        />

                </FrameLayout>

                <Button
                    android:id="@+id/submitNo"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login/SignUp"
                    android:padding="15dp"
                    android:textColor="#fff"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:elevation="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    />


                <TextView
                    android:text="@string/number_bond"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="10sp"
                    tools:ignore="RtlCompat" />



                <TextView
                    android:text="       OR         "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    />


                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    />


                <TextView
                    android:text="@string/fb_bond"
                    android:textAlignment="textStart"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textSize="10sp"
                    tools:ignore="RtlCompat" />

                <Button
                    android:id="@+id/skip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/skip"
                    android:textAllCaps="true"
                    android:background="@drawable/transparent_btn_back"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>



</FrameLayout>
